syntax = "proto3";
import "google/protobuf/struct.proto";

service Everyboard {
    rpc initializeGame (GameIdAndType) returns (SuccessOrFailure);
    rpc deleteGame (GameId) returns (SuccessOrFailure);
    rpc startGame (GameId) returns (SuccessOrFailure);
    rpc addMove (GameIdAndMove) returns (SuccessOrFailure);
    rpc addRequest (GameIdAndRequest) returns (SuccessOrFailure);
    rpc addReply (GameIdAndReplyToRequest) returns (SuccessOrFailure);
    rpc addAction (GameIdAndAction) returns (SuccessOrFailure);
}

message GameId {
    string idToken = 1;
    string gameId = 2;
}

message GameIdAndType {
    string idToken = 1;
    string gameId = 2;
    string type = 3;
}

message GameIdAndMove {
    string idToken = 1;
    string gameId = 2;
    google.protobuf.Struct move = 3;
}

message GameIdAndRequest {
    string idToken = 1;
    string gameId = 2;
    google.protobuf.Struct request = 3;
}

message GameIdAndReplyToRequest {
    string idToken = 1;
    string gameId = 2;
    string requestId = 3;
    google.protobuf.Struct reply = 4;
}

message GameIdAndAction {
    string idToken = 1;
    string gameId = 2;
    string action = 3;
}


message SuccessOrFailure {
    bool success = 1;
    string errorMessage = 2;
}

message GameIdOrFailure {
    bool success = 1;
    string errorMessage = 2;
    string gameId = 3;
}
